--- a/Map/Assembly-CSharp.csproj
+++ b/Map/Assembly-CSharp.csproj
@@ -51,6 +51,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Character\Walking.cs" />
      <Compile Include="Assets\Characteranimator.cs" />
      <Compile Include="Assets\equalscript.cs" />
      <Compile Include="Assets\FlickeringLight.cs" />
