--- a/Map/Assembly-CSharp.csproj
+++ b/Map/Assembly-CSharp.csproj
@@ -82,6 +82,7 @@
      <Compile Include="Assets\PlayerController.cs" />
      <Compile Include="Assets\PlayerMotor.cs" />
      <Compile Include="Assets\PlayerSetup.cs" />
+     <Compile Include="Assets\PlayerUI.cs" />
      <Compile Include="Assets\RandomSpawn.cs" />
      <Compile Include="Assets\RoomList.cs" />
      <Compile Include="Assets\SampleScenes\Scripts\CameraSwitch.cs" />
